fixed profile header alignment

--- a/UI-3/assets/css/style.css
+++ b/UI-3/assets/css/style.css
@@ -247,7 +247,13 @@ header {
     color: #fff;
 }
 
+header .icon {
+    display: inline-block;
+    float: left;
+}
+
 header .acct {
+    display: inline-block;
     font-weight: 700;
     font-size: 14px;
 }
